[project]

name = "wontwm"
version = "0.0.1"
authors = ["Chenkai Shao <cshao06@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
# penrose = { git = "https://github.com/sminez/penrose", branch = "develop" }
xcb = { version = "0.9.0", features = ["randr", "xinerama"] }
simplelog = "0.8.0"
#xkbcommon = { version = "0.3.0", features = ["x11"] }
# scancode = "0.1.2"
# colored = "1.5.2"
anyhow = "1.0.32"
xcb-util = { version = "0.3.0", features = ["ewmh", "icccm", "keysyms"] }
lazy_static = "1.4.0"

# [dependencies.xinerama]
# git = "https://github.com/Kintaro/rust-xinerama.git"

# [[bin]]
# name = "wontwm"
# [[bin]]
# name = "wontdo"

[dev-dependencies]
# simplelog = "0.8.0"
